bot and walls spawing without falling

--- a/person_follower_sim/CMakeLists.txt
+++ b/person_follower_sim/CMakeLists.txt
@@ -11,6 +11,17 @@ find_package(ament_cmake REQUIRED)
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
+# Install launch files
+
+install(DIRECTORY
+  launch
+  worlds
+  urdf
+  meshes
+  models
+  DESTINATION share/${PROJECT_NAME}
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
@@ -22,16 +33,5 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
-install(
-  DIRECTORY
-  gazebo
-  launch
-  meshes
-  urdf  
-  worlds  
-  DESTINATION
-    share/${PROJECT_NAME}/
-)
 
 ament_package()
