--- a/person_follower_sim/package.xml
+++ b/person_follower_sim/package.xml
@@ -3,19 +3,18 @@
 <package format="3">
   <name>person_follower_sim</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="harivikinesh@gmail.com">vickey</maintainer>
-  <license>TODO: License declaration</license>
+  <description>person_follower_sim</description>
+  <maintainer email="abhishekgarg7077@gmail.com">Abhishek Garg</maintainer>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <exec_depend>ros_gz_sim</exec_depend>
-  <exec_depend>ros2launch</exec_depend>
-
+  <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>xacro</exec_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
+    <gazebo_ros gazebo_model_path="${prefix}/.." />
   </export>
 </package>
